tests/neg-with-compiler/t12290/SCALA_ONLY_Invalid1.java
// test: -jvm 15+
class SCALA_ONLY_Invalid1 {

    public static final String badOpeningDelimiter = """non-whitespace  // error
      foo
    """;  // error
}
